--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-asset": "^12.0.9",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "^14.0.9",
     "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
