--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -24,6 +24,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "19537f40-6e31-4104-8acc-deafff491400"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/19537f40-6e31-4104-8acc-deafff491400"
     }
   }
 }
