--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -22,6 +22,7 @@
     "expo-font": "^14.0.9",
     "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "parse": "^7.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
